# SimpleChat

./: .gitignore  LICENSE  README.md  meson.build
res/: estilizador.cpp  estilizador.hpp  vista_chat.glade  vista_forma_conexion.glade  vista_forma_id.glade
src/controller/: controlador_forma_conexion.cpp  controlador_forma_conexion.hpp
src/main/: cliente.cpp  cliente.hpp  cliente_chat.cpp  estado.cpp  estado.hpp  mensaje.cpp  mensaje.hpp  sala.cpp  sala.hpp  server  server.cpp  server.hpp  servidor_chat.cpp  usuario.cpp  usuario.hpp
src/test/: usuario_unittest.cpp
